--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="erebus">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- App identity -->
+    <title>Erebus Portal — Athens Thought-Time</title>
+    <meta name="description" content="Erebus Portal for the Athens Thought-Time LARP. Create characters, manage downtimes, and navigate the court. Powered by Cerebral Productions." />
+    <meta name="application-name" content="Erebus Portal" />
+    <meta name="theme-color" content="#8a0f1a" />
+    <meta name="color-scheme" content="dark only" />
+    <meta name="apple-mobile-web-app-title" content="Erebus Portal" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+
+    <!-- Favicon & PWA icons (all use ATT logo) -->
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/img/ATT-logo(1).png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/img/ATT-logo(1).png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!-- Social / Open Graph -->
+    <meta property="og:title" content="Erebus Portal — Athens Thought-Time" />
+    <meta property="og:description" content="Enter the Court. Build your character, spend XP, and coordinate your coterie." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="/" />
+    <meta property="og:image" content="%PUBLIC_URL%/img/ATT-logo(1).png" />
+    <meta property="og:image:alt" content="Erebus Portal ATT logo" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="Erebus Portal — Athens Thought-Time" />
+    <meta name="twitter:description" content="V5 character builder & court tools for the Athens Thought-Time LARP." />
+    <meta name="twitter:image" content="%PUBLIC_URL%/img/ATT-logo(1).png" />
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600;700&family=Inter:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript style="color:#eee; background:#1a0c0f; padding:12px; display:block; text-align:center;">
+      JavaScript is required to enter the Court. Please enable it.
+    </noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
