Fixed reetuals, better chat view on admin, better css on admin, fixed througth, ffirxed chat notifications

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- App identity -->
-    <title>Erebus Portal — Athens Thought-Time</title>
-    <meta name="description" content="Erebus Portal for the Athens Thought-Time LARP. Create characters, manage downtimes, and navigate the court. Powered by Cerebral Productions." />
+    <title>Erebus Portal — Athens Through-Time</title>
+    <meta name="description" content="Erebus Portal for the Athens Through-Time LARP. Create characters, manage downtimes, and navigate the court. Powered by Cerebral Productions." />
     <meta name="application-name" content="Erebus Portal" />
     <meta name="theme-color" content="#8a0f1a" />
     <meta name="color-scheme" content="dark only" />
@@ -20,15 +20,15 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!-- Social / Open Graph -->
-    <meta property="og:title" content="Erebus Portal — Athens Thought-Time" />
+    <meta property="og:title" content="Erebus Portal — Athens Through-Time" />
     <meta property="og:description" content="Enter the Court. Build your character, spend XP, and coordinate your coterie." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="/" />
     <meta property="og:image" content="%PUBLIC_URL%/img/ATT-logo(1).png" />
     <meta property="og:image:alt" content="Erebus Portal ATT logo" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="Erebus Portal — Athens Thought-Time" />
-    <meta name="twitter:description" content="V5 character builder & court tools for the Athens Thought-Time LARP." />
+    <meta name="twitter:title" content="Erebus Portal — Athens Through-Time" />
+    <meta name="twitter:description" content="V5 character builder & court tools for the Athens Through-Time LARP." />
     <meta name="twitter:image" content="%PUBLIC_URL%/img/ATT-logo(1).png" />
 
     <!-- Fonts -->
